--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,8 +4,31 @@ html {box-sizing:border-box;}
 body {
   margin:0;
   padding:0;
+  align-content: center;
 }
 
 h1 {
-  color:blue;
+  color:black;
+  margin: auto;
+}
+.wrapper{
+	width:1300px;
+	font-weight: lighter;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: auto;
+}
+.box{
+	width:300px;
+	border:1px solid gray;
+	border-radius: 5px;
+	padding: 10px;	
+	margin: 10px;
+
+}
+img{
+	width:50px;
+	height:50px;
+	align-content: center;
 }
